--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,12 +1,2 @@
-html{
-    font-size: 20px;
-}
-body{
-    background-color: black;
-    p{
-        color: yellow;
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
-        font-size: 3rem;
-    }    
-}
+@import "./layout/_main.scss";
+@import "./layout/_header.scss";
